# gc-ascii-keyboard

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: gckeybrd.c  gckeybrd.h  gckeymap.h  main.c
